--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   dio: ^4.0.0
+  fluttertoast: ^8.0.3
   http: ^0.13.1
 
 dev_dependencies:
